--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movie-searcher",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sergr377.github.io/movie-searcher",
+  "homepage": "https://sergr377.github.io/movie-searcher/",
   "dependencies": {
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
