--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.13.1",
     "react-infinite-scroll-component": "^5.0.5",
     "react-redux": "^7.2.0",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-swipeable-views": "^0.13.9",
